--- a/landing1.html
+++ b/landing1.html
@@ -101,7 +101,7 @@
             <div id="hero-slider" class="flex overflow-x-auto hide-scrollbar gap-6 snap-x snap-mandatory pb-4">
                 
                 <!-- Slide 1 -->
-                <div class="snap-center shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-primary to-primaryDark text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
+                <div class="snap-start shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-primary to-primaryDark text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
                     <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=800&q=80')] opacity-20 mix-blend-overlay group-hover:scale-105 transition duration-700 object-cover"></div>
                     <div class="relative z-10">
                         <span class="inline-block px-3 py-1 bg-white/20 rounded-full text-xs font-bold uppercase tracking-wider mb-4 backdrop-blur-sm">Program Baru</span>
@@ -112,7 +112,7 @@
                 </div>
 
                 <!-- Slide 2 -->
-                <div class="snap-center shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-secondary to-secondaryDark text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
+                <div class="snap-start shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-secondary to-secondaryDark text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
                     <div class="absolute right-0 bottom-0 w-64 h-64 bg-white/10 rounded-full blur-3xl translate-x-1/3 translate-y-1/3 group-hover:scale-110 transition duration-700"></div>
                     <div class="relative z-10">
                         <span class="inline-block px-3 py-1 bg-white/20 rounded-full text-xs font-bold uppercase tracking-wider mb-4 backdrop-blur-sm">Akselerasi Karier</span>
@@ -123,7 +123,7 @@
                 </div>
 
                 <!-- Slide 3 -->
-                <div class="snap-center shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-gray-800 to-gray-900 text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
+                <div class="snap-start shrink-0 w-[90vw] md:w-[600px] h-[260px] rounded-2xl p-8 bg-gradient-to-r from-gray-800 to-gray-900 text-white flex flex-col justify-center relative shadow-lg overflow-hidden group">
                     <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1551434678-e076c223a692?auto=format&fit=crop&w=800&q=80')] opacity-20 mix-blend-overlay group-hover:scale-105 transition duration-700 object-cover"></div>
                     <div class="relative z-10">
                         <span class="inline-block px-3 py-1 bg-primary/30 text-primary-100 rounded-full text-xs font-bold uppercase tracking-wider mb-4 backdrop-blur-sm border border-primary/50">Siap Kerja</span>
@@ -900,7 +900,7 @@
                 slider.appendChild(clone);
             });
 
-            const scrollDelay = 3000; // 3 seconds pause between slides
+            const scrollDelay = 1800;
             let isPaused = false;
             let autoSlideInterval;
 
