--- a/landing2.html
+++ b/landing2.html
@@ -114,14 +114,14 @@
             <div id="slider-container" class="flex transition-transform duration-500 ease-in-out h-64 md:h-80 w-full">
                 
                 <!-- Slide 1 -->
-                <div class="w-full flex-shrink-0 flex items-center px-8 md:px-16 bg-gradient-to-r from-teal-50 to-white relative">
+                <div class="w-full flex-shrink-0 flex items-center px-6 md:px-16 bg-gradient-to-r from-teal-50 to-white relative">
                     <div class="max-w-xl z-10">
-                        <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
+                        <h2 class="text-2xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
                             Belajar Coding Gratis.<br>
                             <span class="text-primary">Tanpa Alasan.</span>
                         </h2>
                         <p class="text-gray-600 mb-6 text-sm md:text-base">Akses puluhan kelas gratis dari mentor industri. Mulai sekarang, tanpa bayar.</p>
-                        <a href="#" class="inline-block bg-primary hover:bg-primaryHover text-white font-semibold py-3 px-8 rounded-lg transition shadow-md">Mulai Belajar Gratis</a>
+                        <a href="#" class="inline-block bg-primary hover:bg-primaryHover text-white font-semibold py-2.5 px-6 md:py-3 md:px-8 rounded-lg transition shadow-md text-sm md:text-base">Mulai Belajar Gratis</a>
                     </div>
                     <!-- Decorative Graphic -->
                     <div class="absolute right-0 bottom-0 h-full hidden md:block opacity-20">
@@ -132,26 +132,26 @@
                 </div>
 
                 <!-- Slide 2 -->
-                <div class="w-full flex-shrink-0 flex items-center px-8 md:px-16 bg-gradient-to-r from-pink-50 to-white relative">
+                <div class="w-full flex-shrink-0 flex items-center px-6 md:px-16 bg-gradient-to-r from-pink-50 to-white relative">
                     <div class="max-w-xl z-10">
-                        <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
+                        <h2 class="text-2xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
                             Upgrade Skill.<br>
                             <span class="text-secondary">0 Rupiah.</span>
                         </h2>
                         <p class="text-gray-600 mb-6 text-sm md:text-base">Tingkatkan portfolio dan keahlian teknis kamu dengan kurikulum terstruktur secara cuma-cuma.</p>
-                        <a href="#" class="inline-block bg-secondary hover:bg-secondaryHover text-white font-semibold py-3 px-8 rounded-lg transition shadow-md">Eksplorasi Kelas</a>
+                        <a href="#" class="inline-block bg-secondary hover:bg-secondaryHover text-white font-semibold py-2.5 px-6 md:py-3 md:px-8 rounded-lg transition shadow-md text-sm md:text-base">Eksplorasi Kelas</a>
                     </div>
                 </div>
 
                 <!-- Slide 3 -->
-                <div class="w-full flex-shrink-0 flex items-center px-8 md:px-16 bg-gradient-to-r from-blue-50 to-white relative">
+                <div class="w-full flex-shrink-0 flex items-center px-6 md:px-16 bg-gradient-to-r from-blue-50 to-white relative">
                     <div class="max-w-xl z-10">
-                        <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
+                        <h2 class="text-2xl md:text-4xl font-extrabold text-gray-900 mb-3 leading-tight">
                             Gratis Hari Ini.<br>
                             <span class="text-blue-600">Siap Kerja Besok.</span>
                         </h2>
                         <p class="text-gray-600 mb-6 text-sm md:text-base">Ribuan talenta telah berhasil memulai karir mereka di sini. Giliran kamu sekarang.</p>
-                        <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-lg transition shadow-md">Mulai Langkahmu</a>
+                        <a href="#" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2.5 px-6 md:py-3 md:px-8 rounded-lg transition shadow-md text-sm md:text-base">Mulai Langkahmu</a>
                     </div>
                 </div>
 
@@ -176,7 +176,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-400 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
-                <input type="text" placeholder="Apa yang ingin kamu pelajari?" class="w-full outline-none bg-transparent text-gray-800 placeholder-gray-400 font-medium">
+                <input type="text" placeholder="Apa yang ingin kamu pelajari?" class="w-full outline-none bg-transparent text-gray-800 placeholder-gray-400 font-medium text-base">
             </div>
             
             <!-- Divider (Desktop) -->
