--- a/landing3.html
+++ b/landing3.html
@@ -64,29 +64,29 @@
         <div class="flex overflow-x-auto snap-x snap-mandatory space-x-4 pb-4 rounded-xl">
             
             <div class="snap-center flex-shrink-0 w-full md:w-[85%] lg:w-[80%] bg-white rounded-xl shadow-md border border-gray-100 overflow-hidden relative flex flex-col md:flex-row h-auto">
-                <div class="p-10 md:p-12 md:w-3/5 flex flex-col justify-center z-10">
+                <div class="p-6 md:p-12 md:w-3/5 flex flex-col justify-center z-10">
                     <span class="text-secondary font-bold text-xs uppercase tracking-wider mb-2">Akses Terbatas</span>
-                    <h2 class="text-3xl font-bold text-slate-900 mb-3 leading-tight">Belajar Coding Gratis. <br><span class="text-primary">Tanpa Alasan.</span></h2>
+                    <h2 class="text-2xl md:text-3xl font-bold text-slate-900 mb-3 leading-tight">Belajar Coding Gratis. <br><span class="text-primary">Tanpa Alasan.</span></h2>
                     <p class="text-slate-500 mb-6 text-sm md:text-base">Akses puluhan kelas gratis dari mentor industri. Mulai sekarang, tanpa bayar sepeserpun.</p>
                     <div>
-                        <button class="bg-primary text-white px-6 py-2.5 rounded-lg font-medium hover:bg-[#118f89] transition shadow-lg shadow-primary/30">Mulai Belajar Gratis</button>
+                        <button class="bg-primary text-white px-6 py-2.5 rounded-lg font-medium hover:bg-[#118f89] transition shadow-lg shadow-primary/30 text-sm md:text-base">Mulai Belajar Gratis</button>
                     </div>
                 </div>
-                <div class="md:w-2/5 bg-gradient-to-br from-blue-50 to-indigo-50 relative overflow-hidden">
+                <div class="h-48 md:h-auto md:w-2/5 bg-gradient-to-br from-blue-50 to-indigo-50 relative overflow-hidden">
                     <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="absolute inset-0 w-full h-full object-cover opacity-90 mix-blend-multiply" alt="Coding">
                 </div>
             </div>
 
             <div class="snap-center flex-shrink-0 w-full md:w-[85%] lg:w-[80%] bg-white rounded-xl shadow-md border border-gray-100 overflow-hidden relative flex flex-col md:flex-row h-auto">
-                <div class="p-10 md:p-12 md:w-3/5 flex flex-col justify-center z-10">
+                <div class="p-6 md:p-12 md:w-3/5 flex flex-col justify-center z-10">
                     <span class="text-secondary font-bold text-xs uppercase tracking-wider mb-2">Skill Up</span>
-                    <h2 class="text-3xl font-bold text-slate-900 mb-3 leading-tight">Upgrade Skill. <br><span class="text-primary">0 Rupiah.</span></h2>
+                    <h2 class="text-2xl md:text-3xl font-bold text-slate-900 mb-3 leading-tight">Upgrade Skill. <br><span class="text-primary">0 Rupiah.</span></h2>
                     <p class="text-slate-500 mb-6 text-sm md:text-base">Frontend, Cyber Security, AI, DevOps — semua materi dasar tersedia gratis untukmu.</p>
                     <div>
-                        <button class="bg-slate-900 text-white px-6 py-2.5 rounded-lg font-medium hover:bg-slate-800 transition">Lihat Katalog</button>
+                        <button class="bg-slate-900 text-white px-6 py-2.5 rounded-lg font-medium hover:bg-slate-800 transition text-sm md:text-base">Lihat Katalog</button>
                     </div>
                 </div>
-                <div class="md:w-2/5 bg-gradient-to-br from-emerald-50 to-teal-50 relative overflow-hidden">
+                <div class="h-48 md:h-auto md:w-2/5 bg-gradient-to-br from-emerald-50 to-teal-50 relative overflow-hidden">
                     <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" class="absolute inset-0 w-full h-full object-cover opacity-90 mix-blend-multiply" alt="Meeting">
                 </div>
             </div>
